misc optim for get event rest api call (#719)
* avoid get conf query for captcha check, load only org name/mail

* avoid doing a query for ENABLE_CAPTCHA_FOR_OFFLINE_PAYMENTS case

* avoid doing a query for hasAllConfigurationsForInvoice/isInvoiceOnly cases

* avoid doing a query for the EuVatChecker.reverseChargeEnabled case

* event description: load only locale and description

* avoid doing query for ENABLE_ITALY_E_INVOICING

* avoid doing the ENABLE_CAPTCHA_FOR_LOGIN query for all requests

* get event api: avoid calling message override twice